# agent-squad-obsidian-search

./: .env.example  .gitignore  CONFIG.md  README.md  docker-compose.yml  main.py  pyproject.toml
modules/: __init__.py  agent.py  cli_config.py  config.py  document_processor.py  logger.py  prompts.py  query_chain.py  tools.py  vault_copy_service.py  vector_store_manager.py
tests/: conftest.py  test_agent.py  test_config.py  test_document_processor.py  test_logger.py  test_tools.py  test_vault_copy_service.py  test_vector_store_manager.py
