[project]
name = "agent-squad-obsidian-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "click>=8.2.1",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.4",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "unstructured[md]>=0.18.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
